Workaround for Qualcomm driver bug in glReadPixels.

When using EXT_multisampled_render_to_texture, glReadPixels fails in
recent Qualcomm Adreno drivers. glCopyTexImage2D still works, so the
workaround is to create a temporary texture, glCopyTexImage2D, and then
glReadPixels from the temporary texture.

WebGL conformance test updates for this bug are here:
https://github.com/KhronosGroup/WebGL/pull/2729

This workaround will be revisited in the passthrough command decoder
and ANGLE when the switch is made to use those for WebGL on Android.

dEQP test is here:
https://android-review.googlesource.com/c/platform/external/deqp/+/796566

Bug: 890002
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I6254242258411997fcfbb3f0145801b398073778
Reviewed-on: https://chromium-review.googlesource.com/c/1279354
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601356}
Former-commit-id: 98d07198bf8ca5d73651c727d229a4468b700d43